# blur_cleaner

./: .gitignore  README.md  gui.py  pyproject.toml  report.html  requirements.txt  run_blur_cleaner_gui.py
blur_cleaner/: __init__.py  __main__.py  apply.py  blur.py  cache_db.py  cli.py  config.py  db.py  detectors.py  fast_scan.py  gui.py  hashers.py  report_html.py  scan.py  trash.py  util.py
blur_cleaner/config/: default.yaml
blur_cleaner/gui/: __init__.py  dialogs.py  main_window.py  preview_panel.py  table_views.py  thumbs.py
scripts/: blur_detector_multiscale.py  gui_blur_cleaner.py
tests/: test_detector.py
